Update ApplicationSecurity.java